--- a/ignite-reactjs-01-fundamentos-react/src/components/Header.module.css
+++ b/ignite-reactjs-01-fundamentos-react/src/components/Header.module.css
@@ -1,4 +1,11 @@
 .header {
   background: #333;
+  display: flex;
+  justify-content: center;
+  padding: 1.25rem 0;
   height: 80px;
+}
+
+.header img {
+  height: 2rem;
 }
