--- a/ignite-reactjs-01-fundamentos-react/src/global.css
+++ b/ignite-reactjs-01-fundamentos-react/src/global.css
@@ -19,14 +19,15 @@
 
 body {
     background: var(--gray-900);
-    color: var(---gray-300);
+    color: var(--gray-300);
     -webkit-font-smoothing: antialiased;
 }
 
 body,
 input,
 textarea,
-button {
+button,
+a {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 1rem;
